added new input e-mail

--- a/index-two.html
+++ b/index-two.html
@@ -9,5 +9,6 @@
 <body>
     <div>number phone - 37369029063</div>
     <div>email - dolinga.va@gmail.com</div>
+    <input type="Введите e-mail">
 </body>
 </html>
