added phones city

--- a/index-two.html
+++ b/index-two.html
@@ -11,5 +11,7 @@
     <div>email - dolinga.va@gmail.com</div>
     <input type="Введите e-mail">
     <div>hello in ekb</div>
+    <div class="moldova">37369029063</div>
+    <div class="pridnestrovie">077517953</div>
 </body>
 </html>
