added email yandex.ru

--- a/index-two.html
+++ b/index-two.html
@@ -15,5 +15,9 @@
     <div>hello in ekb</div>
     <div class="moldova">37369029063</div>
     <div class="pridnestrovie">077517953</div>
+
+    <div>Пока ты мне не друг!</div>
+    
+    <div>vitaly.dolinga@yandex.ru</div>
 </body>
 </html>
