added e-mail gmail.com

--- a/index-two.html
+++ b/index-two.html
@@ -19,5 +19,6 @@
     <div>Пока ты мне не друг!</div>
     
     <div>vitaly.dolinga@yandex.ru</div>
+    <div>dolinga.va@gmail.com</div>
 </body>
 </html>
