--- a/index-two.html
+++ b/index-two.html
@@ -15,5 +15,7 @@
     <div>hello in ekb</div>
     <div class="moldova">37369029063</div>
     <div class="pridnestrovie">077517953</div>
+
+    <div>dolinga.va@gmail.com</div>
 </body>
 </html>
